# drake

./: .gitignore
ani_model_library/: BUILD.bazel
ani_model_library/ikea_bin/: README.md  _BUILD.bazel  ikea_bin.sdf  print_runfiles.sh
ani_model_library/ikea_bin/assets/: ikea_bin.gltf  ikea_bin_v3.vtk  ikea_bin_v4.1.vtk  ikea_bin_v4.1_only_tets.vtk  ikea_bin_v4.STL  ikea_bin_v4.gltf  ikea_bin_v4.vtk  ikea_bin_v4_only_tets.vtk
ani_model_library/m12_screw/: README.md  _BUILD.bazel  m12_screw.sdf  m12_screw_gpt.sdf
ani_model_library/m12_screw/assets/: bin_of_screws.stl  m12_screw_v2.STL  m12_screw_v2.gltf  m12_screw_v2.vtk  m12_screw_v2_tets.vtk
examples/ani_pose_estimation_demo/: BUILD.bazel  README.md  ani_test.cc  binofscrews_sim.cc  example_scenarios.yaml  example_scenarios_minimal.yaml  get_poses.py  hardware_sim.cc  model_assembler.py  scenario.cc  screw_poses.txt
examples/hardware_sim/: BUILD.bazel  example_scenarios.yaml
examples/hello/: _BUILD.bazel  hello.cc
tools/: filter_vtk_keep_tets.py
